--- a/public/styles.css
+++ b/public/styles.css
@@ -1,1 +1,91 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400,500,700;1,400&display=swap');
+
+:root {
+	--primary-color: #fd951f;
+	--second-color: #1fd4fd;
+
+
+}
+
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	text-decoration: none;
+	list-style-type: none;
+	border: none;
+
+}
+
+html,body {
+	min-height: 100%;
+}
+
+body {
+	font-family: 'Roboto', 'sans-serif';
+	background-color: #f9f9f9
+
+}
+
+/* HEADER */
+
+header {
+	background-color: black;
+	color: white;
+
+	width: 100%;
+	padding: 32px 0;
+	text-align: center;
+}
+
+header div.container {
+	display: grid;
+	grid-template-columns: 220px auto 280px;
+	align-items: center;
+	grid-gap: 24px;
+}
+
+header div.container a {
+	justify-self: start
+
+}
+
+/*  logo  */
+
+.logo h1 {
+	color: white;
+	font-size: 32px;
+	line-height: 46px;
+}
+
+.logo h2 {
+	color: var(--primary-color);
+	font-size: 14px;
+	line-height: 16px;
+	letter-spacing: 2px;
+}
+
+/* HEADER SEARCH */
+
+.search input {
+	width: 100%;
+	padding: 8px 16px;
+	border-radius: 2px;
+	font-size: 16px;
+
+
+}
+
+/* primary menu */
+
+nav.primary ul {
+	display: flex;
+	justify-content: space-between;
+}
+
+nav.primary ul li a {
+	display: flex;
+	align-items: center;
+}
+
