--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -4,16 +4,19 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
+      link
     />
     <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="/styles.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
     {% block head %}
       <title>Launch Store</title>
     {% endblock %}
    
-    {%include "parts/header.njk"%}
+    {% include "parts/header.njk"%}
 
     {% include "parts/footer.njk" %}
 
