--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -21,7 +21,7 @@
 			<ul>
 				<li>
 					<a href="/ads/create">
-						<i class="material-icons">Add</i>
+						<i class="material-icons">add</i>
 						Novo Anúncio
 					</a>
 				</li>
