--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -9,11 +9,7 @@
 		</a>
 
 		<form class="search" method="GET" action="/products/search">
-			<input 
-			type="text" 
-			name="filter" 
-			placeholder="Buscar por Produtos" 
-			{% if search.term %} value={{search.term}}
+			<input type="text" name="filter" placeholder="Buscar por Produtos" {% if search.term %} value={{search.term}}
 				{% endif %}>
 		</form>
 
