--- a/public/styles.css
+++ b/public/styles.css
@@ -106,3 +106,32 @@ nav.primary ul li a:hover {
 	color: var(--primary-color)
 }
 
+/* PRODUCT FORM */
+
+section.form {
+	background-color: white;
+	padding: 32px 24px;
+	margin: 32px auto;
+
+	box-shadow: 2px 2px 2px -4px rgba(60, 60, 60, .9);
+	border: 1px solid #efefef;
+	border-radius: 4px;
+
+	max-width: 700px;
+	width: 70%;
+
+}
+
+section.form .header h3 {
+	font-size: 14px;
+	line-height: 24px;
+	letter-spacing: 0.7px;
+	text-transform: uppercase;
+
+	font-weight: bold;
+	color: var(--primary-color);
+
+	margin-bottom: 16px;
+
+
+}
