--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -14,7 +14,7 @@
 
 <div class="item">
 	<div>
-		Name
+		Titulo
 	</div>
 	<div>
 		<input type="text" name="name" placeholder="titulo do anúncio" value="{{ product.name }}">
