--- a/src/app/views/products/create.njk
+++ b/src/app/views/products/create.njk
@@ -6,7 +6,7 @@
 	<form method="POST" action='/products'>
 
 		<div class="header">
-			<h3>Cadastrar produto</h3>
+			<h3>Cadastrar produto {{productId}}</h3>
 
 		</div>
 
@@ -15,7 +15,7 @@
 				
 			</div>
 
-			 <button class="button"type="submit">Save</button>
+			 <button class="button"type="submit">Salvar</button>
 
 	</form>
 
