--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -41,8 +41,14 @@
 		Valor
 	</div>
 	<div>
-		<input type="text" name="price" placeholder="Preço do produto" value="{{ product.price }}">
-		{# Mascara de dinheiro/reais #}
+		<input 
+		type="text" 
+		name="price" 
+		placeholder="Preço do produto"
+		value="{{ product.price }}"
+		onkeydown="Mask.apply(this, 'formatBRL')"
+		>
+		
 	</div>
 	{% if product.old_price %}
 	<input type="hidden" name="old_price" value={{product.old_price}}>
