--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -30,9 +30,7 @@
 		Descrição
 	</div>
 	<div>
-		<textarea name="description">
-					{{product.description}}
-				</textarea>
+		<textarea name="description">{{product.description}}</textarea>
 	</div>
 </div>
 
