add: fields edit

--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -15,13 +15,13 @@
 
 		</div>
 
-		<button class="button" type="submit">Atualizar</button>
+		<button class="button edit" type="submit">Atualizar</button>
 
 	</form>
 
 	<form id="form-delete" action="/product?_method=DELETE" method="post">
 		<input type="hidden" name="id" value="{{ product.id}}">
-		<button class="button" type="submit">Delete</button>
+		<button class="button delete" type="submit">Delete</button>
 	</form>
 
 </section>
