--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -1,4 +1,5 @@
 <html lang="pt-BR">
+<title>Launch Store | Compra e Venda</title>
 
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" link />
