add: form delete

--- a/src/app/views/products/edit.njk
+++ b/src/app/views/products/edit.njk
@@ -19,9 +19,9 @@
 
 	</form>
 
-	<form id="form-delete" action="/product?_method=DELETE" method="post">
-		<input type="hidden" name="id" value="{{ product.id}}">
-		<button class="button delete" type="submit">Delete</button>
+	<form id="form-delete" method="post" action="/products?_method=DELETE" >
+		<input type="hidden" name="id" value="{{product.id}}">
+		<button class="button delete" type="submit">Deletar</button>
 	</form>
 
 </section>
