--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -26,6 +26,20 @@
 </div>
 
 <div class="item">
+	<div>Fotos</div>
+	<div>
+		<div id="photos-upload">
+		<input type="file" name="photos" multiple accept="image/*"
+		>
+		<p>Selecione até 6 fotos</p>
+		</div>
+		<div id="photo-preview">
+		
+		</div>
+	</div>
+</div>
+
+<div class="item">
 	<div>
 		Valor
 	</div>
