--- a/public/styles.css
+++ b/public/styles.css
@@ -240,3 +240,57 @@ form .item span {
 form .fields {
 	margin-bottom: 64px;
 }
+
+/* photo upload */
+
+form .item #photos-upload {
+	position: relative;
+
+	display: block;
+	overflow: hidden;
+	width: 200px;
+}
+
+form .item #photos-upload p {
+	padding: 8px 16px;
+	border-radius: 4px;
+	box-shadow: 0 2px 2px -6px #333;
+	background-color: var(--second-color);
+	color: white;
+
+	width: 100%;
+	text-align: center;
+
+
+	text-transform: uppercase;
+	font-size: 14px;
+}
+
+form .item #photos-input {
+	position: absolute;
+	top: 0;
+	left: 0;
+	cursor: pointer;
+
+	display: block;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	opacity: 0;
+}
+
+form .item #photo-preview {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	grid-gap: 8px;
+	width: 100%;
+	margin: 8px 0;
+}
+
+form .item #photo-preview img {
+	width: 100%;
+	height: 150px;
+
+	object-fit: cover;
+	
+}
