--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -1,99 +1,105 @@
 <div class="item">
-	<div>Categoria</div>
-	<div>
-		<select name="category_id">
-			{% for category in categories %}
-			<option value="{{category.id}}" {% if product.category_id == category_id %} selected="selected" {% endif %}>
-				{{category.name}}
-			</option>
-			{% endfor %}
-		</select>
-	</div>
+    <div>Category</div>
+    <div>
+        <select name="category_id">
+            {%for category in categories%}
+            <option value="{{category.id}}" {%if product.category_id == category.id%}selected{%endif%}>
+                {{category.name}}
+            </option>
+            {%endfor%}
+        </select>
+    </div>
 </div>
 
 <div class="item">
-	<div>Título</div>
-	<div>
-		<input type="text" name="name" placeholder="Digite o Título do Anúncio" value="{{product.name}}">
-	</div>
+    <div>Name</div>
+    <div>
+        <input 
+            type="text"
+            name="name"
+            value="{{product.name}}"
+        >
+    </div>
 </div>
 
 <div class="item">
-	<div>Descrição</div>
-	<div>
-		<textarea name="description">{{product.description}}</textarea>
-	</div>
+    <div>Description</div>
+    <div>
+        <textarea name="description">{{product.description}}</textarea>
+    </div>
 </div>
 
 <div class="item">
-	<div>Fotos</div>
-	<div>
-		<div id="photos-upload">
-		<input type="file" name="photos" multiple accept="image/*"
-		>
-		<p>Selecione até 6 fotos</p>
-		</div>
-		<div id="photo-preview">
-		
-		</div>
-	</div>
+    <div>Picture</div>
+    <div>
+        <div id="photos-upload">
+            <input
+                id="photos-input"
+                type="file" 
+                name="photos" 
+                multiple
+                accept="image/*"
+                onchange="PhotosUpload.handleFileInput(event)"
+            >
+            <p>Selecione até 6 fotos</p>
+        </div>
+        <div id="photos-preview">
+
+        </div>
+    </div>
 </div>
 
 <div class="item">
-	<div>
-		Valor
-	</div>
-	<div>
-		<input type="text" name="price" placeholder="Preço do produto" value="{{ product.price }}"
-			onkeydown="Mask.apply(this, 'formatBRL')">
-
-	</div>
-	{% if product.old_price %}
-	<input type="hidden" name="old_price" value={{product.old_price}}>
-	{% endif %}
+    <div>Price</div>
+    <div>
+        <input 
+            type="text"
+            name="price"
+            placeholder="R$ "
+            value="{{product.price}}"
+            onkeydown="Mask.apply(this, 'formatBRL')"
+        >
+    </div>
+    {%if product.old_price %}
+        <input type="hidden" name="old_price" value="{{product.old_price}}">
+    {%endif%}
 </div>
 
 <div class="item">
-	<div>
-		Quantidade
-	</div>
-	<div>
-		<input type="text" name="quantity" placeholder="Estoque disponível" value="{{ product.quantity }}">
-	</div>
+    <div>Quantity</div>
+    <div>
+        <input 
+            type="number"
+            name="quantity"
+            value="{{product.quantity}}"
+        >
+    </div>
 </div>
 
-{% if  (product.status =='1') or (product.status ==0) %}
+{%if (product.status == '1') or (product.status == 0)%}
 <div class="item">
-	<div>
-		Disponível
-	</div>
-	<div>
-		<span>
-			<input type="radio" name="gender" value="M" {% if product.status  == '1' %} checked="checked"
-				{% endif %}>Sim
-		</span>
-
-		<span>
-			<input type="radio" name="gender" value={% if product.status %}=="0" checked="checked" {% endif %}>Não
-		</span>
-
-	</div>
+    <div>Avaible</div>
+    <div>
+        <span>
+            <input
+                type="radio"
+                name="status"
+                value="1"
+                {% if product.status == '1' %}
+                    checked
+                {% endif %}
+            > Yes
+        </span>
+        <span>
+            <input
+                type="radio"
+                name="status"
+                value="0"
+                {% if product.status == '0' %}
+                    checked
+                {% endif %}
+            > No
+        </span>
+    </div>
 </div>
-{% endif %}
-
-
-{# <div class="item">
-	<div>
-		Disponível
-	</div>
-	<div>
-		<span>
-			<input type="radio" name="status" value="1" {% if product.status  == '1' %} checked="checked" {% endif %}>Sim
-		</span>
-
-		<span>
-			<input type="radio" name="status" value="0"{% if product.status %}=="0" checked="checked" {% endif %}>Não
-		</span> #}
-
-{# </div>
-</div> #}
+{%endif%}
