--- a/public/styles.css
+++ b/public/styles.css
@@ -279,7 +279,7 @@ form .item #photos-input {
 	opacity: 0;
 }
 
-form .item #photo-preview {
+form .item #photos-preview {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-gap: 8px;
@@ -287,7 +287,7 @@ form .item #photo-preview {
 	margin: 8px 0;
 }
 
-form .item #photo-preview img {
+form .item #photos-preview img {
 	width: 100%;
 	height: 150px;
 
