--- a/public/styles.css
+++ b/public/styles.css
@@ -293,4 +293,34 @@ form .item #photos-preview img {
 
 	object-fit: cover;
 	
+	
 }
+
+#photos-preview .photo {
+    position: relative;
+}
+
+#photos-preview .photo i {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background: rgba(255, 255, 255, 0.8);
+
+    color: red;
+
+    width: 100%;
+    height: 100%;
+
+    font-size: 250%;
+    cursor: pointer;
+
+    transition: opacity 200ms;
+
+    opacity: 0;
+}
+
+#photos-preview .photo:hover i {
+    opacity: 1;
+}
+
