--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -44,7 +44,14 @@
             <p>Selecione até 6 fotos</p>
         </div>
         <div id="photos-preview">
-
+            {% if   files %}
+                {% for image in files%}
+                    <div class="photo" id= "{{image.id}}">
+                        <img src="{{image.src}}" alt="{{image.name}}">
+                        <i class="material-icons"></i>
+                    </div>
+                {% endfor %}
+            {% endif %}
         </div>
     </div>
 </div>
