feat: dinamic items

--- a/src/app/views/products/fields.njk
+++ b/src/app/views/products/fields.njk
@@ -100,7 +100,7 @@
                 {% if product.status == '1' %}
                     checked
                 {% endif %}
-            > Yes
+            > Sim
         </span>
         <span>
             <input
@@ -110,7 +110,7 @@
                 {% if product.status == '0' %}
                     checked
                 {% endif %}
-            > No
+            > Não
         </span>
     </div>
 </div>
