--- a/public/styles.css
+++ b/public/styles.css
@@ -345,9 +345,42 @@ form .item #photos-preview img {
 
 }
 
-.product-single .gallery {
-	width: 100%;
+/*product gallery*/
 
+.product-single .highlight > img {
+	width: 100%;
+	height: 280px;
+
+	object-fit: none;
+	object-position: 50% 50%;
+	border: 1px solid #efefef;
+
+	cursor: zoom-in;
+}
+
+.product-single .gallery-preview {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+
+
+	grid-gap: 2px;
+}
+
+.product-single .gallery-preview img {
+	height: 100px;
+	width: 100%;
+	cursor: pointer;
+	object-fit: cover;
+
+	opacity: 0.6;
+
+
+}
+
+.product-single .gallery-preview img:hover,
+.product-single .gallery-preview img.active {
+	opacity: 1;
+	transition: 200ms;
 }
 
 .product-single .gallery img {
@@ -406,6 +439,7 @@ form .item #photos-preview img {
 	font-size: 14px;
 	letter-spacing: .4px;
 }
+
 
 
 
