feat: images gallery

--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -4,7 +4,18 @@
 <section class="product-single container">
 
     <div class="gallery">
-        <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" />
+        <div class="highlight">
+            {% if not files[0] %}
+            <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" />
+            {% else %}
+            <img src="{{files[0].src}}" alt="{{files[0].name}}">
+            {% endif %}
+        </div>
+        <div class="gallery-preview">
+            {% for image in files %}
+            <img src="{{image.src}}" alt="{{image.name}}" {% if loop.index0 == 0 %} class="active" {% endif %}>
+            {% endfor %}
+        </div>
     </div>
 
     <div class="info">
@@ -30,11 +41,11 @@
 
             <div class="buy">
                 {% if product.status == 0 %}
-                <p class="unavailable">Indisponível</p>
+                 <p class="unavailable">Indisponível</p>
                 {% elseif product.quantity == 0 %}
-                <p class="unavailable">Fora de estoque</p>
+                  <p class="unavailable">Fora de estoque</p>
                 {% else %}
-                <button class="button">Comprar</button>
+                  <button class="button">Comprar</button>
                 {% endif %}
             </div>
         </div>
