--- a/public/styles.css
+++ b/public/styles.css
@@ -39,7 +39,7 @@ body {
 	width: 100%;
 	border-radius: 4px;
 
-	/* colocar botao para baixo */
+	/* button bottom */
 	align-self: end;
 
 	font-weight: bold;
@@ -79,7 +79,6 @@ header,
 footer {
 	background-color: black;
 	color: white;
-
 	width: 100%;
 	padding: 32px 0;
 	text-align: center;
@@ -94,6 +93,7 @@ footer {
 
 footer {
 	margin-top: auto;
+	
 }
 
 header div.container {
@@ -215,7 +215,7 @@ form .item select {
 	-webkit-appearance: none;
 	 appearance: none;
 
-	/* trazer icone lateral devolta */
+	/* icon left back */
 	background-color: #fff;
 	background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
 		linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
@@ -362,7 +362,6 @@ form .item #photos-preview img {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 
-
 	grid-gap: 2px;
 }
 
@@ -373,6 +372,7 @@ form .item #photos-preview img {
 	object-fit: cover;
 
 	opacity: 0.6;
+	transition: 200ms;
 
 
 }
@@ -380,8 +380,62 @@ form .item #photos-preview img {
 .product-single .gallery-preview img:hover,
 .product-single .gallery-preview img.active {
 	opacity: 1;
-	transition: 200ms;
 }
+
+/*light box target*/
+
+.product-single .highlight .lightbox-target {
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background: rgba(0,0,0,.7);
+
+	overflow: hidden;
+	z-index: 100;
+
+
+	top: -100%;
+	left: 0;
+	opacity: 0;
+
+	transition: opacity 400ms;
+
+}
+
+.product-single .highlight .lightbox-target img {
+	margin: auto;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+
+	background-color: white;
+	box-shadow: 0px 0px 8px rgba(0,0,0,.3);
+
+	width: 90%;
+	height: 90%;
+
+	object-fit: contain;
+}
+
+.product-single .highlight a.lightbox-target-close {
+	width: 50px;
+	height: 50px;
+
+	background: white;
+	position: absolute;
+	top: -80px;
+	right: 0;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	
+	transition: 400ms;
+}
+
 
 .product-single .gallery img {
 	width: 100%
@@ -439,6 +493,57 @@ form .item #photos-preview img {
 	font-size: 14px;
 	letter-spacing: .4px;
 }
+
+/* SHOP */
+
+.shop h2 {
+	margin: 48px 0;
+
+}
+
+.shop .items {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr;
+	grid-gap: 32px;
+}
+
+.shop .product {
+	display: grid;
+
+}
+
+.shop .product .image {
+	padding-top: 56.25%;
+
+	background-size: cover;
+	background-position: center center;
+	background-repeat: no-repeat;
+
+}
+
+.shop .items h4 {
+	margin: 8px 0;
+	font-weight: 300;
+	color: #999;
+}
+
+.shop .items p {
+	color: #101010;
+	font-weight: 300;
+	font-size: 24px;
+	margin-top: 2px;
+}
+.shop .product .oldPrice {
+	padding: 0;
+	margin: 4px 0;
+
+	font-size: 14px;
+	color: #999;
+
+	text-decoration: line-through;
+}
+
+
 
 
 
