--- a/src/app/views/home/index.njk
+++ b/src/app/views/home/index.njk
@@ -1,26 +1,8 @@
 {% extends "layout.njk" %}
+{% import "parts/section-products.njk" as section %}
 
 {% block content %}
-<section class="shop container">
-    <h2> Ùltimos produtos </h2>
 
-    <div class="items">
-        {% for product in products %}
-            <div class="product">
-                <div 
-                class="image"
-                style = "background: url({product.img if product.img else '//placehold.it/500x500?text=produto sem imagem'})"
-                
-                >
-                <p>{{product.price}}</p>
-                <h4>{{product.name}}</h4>
-
-                <a href="/products/{{product.id}}" class="button">Ver produto</a>
-                </div>
-            </div>
-        {% endfor %}
-    </div>
-</section>
-
+ {{section.products('Ùltimos produtos', 'container', products)}}
 
 {% endblock content %}
