--- a/src/app/views/products/create.njk
+++ b/src/app/views/products/create.njk
@@ -6,7 +6,7 @@
 	<form method="POST" action="/products" enctype="multipart/form-data">
 
 		<div class="header">
-			<h3>Cadastrar produto{{productId}}</h3>
+			<h3>Cadastrar Produto{{productId}}</h3>
 		</div>
 
 		<div class="fields">
