--- a/src/app/views/products/show.njk
+++ b/src/app/views/products/show.njk
@@ -6,14 +6,39 @@
     <div class="gallery">
         <div class="highlight">
             {% if not files[0] %}
-            <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" />
+               <img src="http://placehold.it/500x500?text=PRODUTO SEM FOTO" />
             {% else %}
-            <img src="{{files[0].src}}" alt="{{files[0].name}}">
+               <img 
+               src="{{files[0].src}}" 
+               alt="{{files[0].name}}" 
+               onclick="Lightbox.open()"
+               >
             {% endif %}
+
+            <div class="lightbox-target">
+                <img 
+                   src="{{files[0].src}}" 
+                   alt="{{files[0].name}}">
+                   <a href="#" 
+                   class="lightbox-close" 
+                   onclick="Lightbox.close()"
+                     >
+                   <i class="material-icons">close</i>
+                </a>
+            </div>
+
         </div>
+
         <div class="gallery-preview">
             {% for image in files %}
-            <img src="{{image.src}}" alt="{{image.name}}" {% if loop.index0 == 0 %} class="active" {% endif %}>
+              <img 
+                 src="{{image.src}}" 
+                 alt="{{image.name}}"
+                 {% if loop.index0 == 0 %} 
+                 class="active" 
+            {% endif %}
+                 onclick="ImageGallery.setImage(event)"
+                 >
             {% endfor %}
         </div>
     </div>
