--- a/src/app/views/search/index.njk
+++ b/src/app/views/search/index.njk
@@ -6,21 +6,21 @@
 
     <aside>
         <div class="header">
-            <h2>Computador</h2>
-            <p>12 Encontrados</p>
+            <h2>{{search.term}}</h2>
+            <p>{{search.total}}</p>
         </div>
 
         <nav class="categories">
             <h4>Categorias</h4>
             <ul>
-                <li><a href="#">Eletrônicos</a></li>
-                <li><a href="#">Comidas</a></li>
+            {% for category in categories %}
+                <li><a href="/products/search?filter={{search.term}}&category={{category.id}}">{{category.name}}</a></li>
+            {% endfor %}
             </ul>
         </nav>
-
     </aside>
 
-    {{section.products('Pesquisados', products)}}
+    {{section.products('', 'Pesquisados', products)}}
 
 </section>
 
