--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -53,6 +53,7 @@
             type="text"
             name="cpf_cnpj"
             value="{{user.cpf_cnpj}}"
+            onkeydown="Mask.apply(this,'cpfCnpj')"
         >
     </div>
 </div>
