--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -65,6 +65,7 @@
             type="text"
             name="cpf_cnpj"
             value="{{user.cep}}"
+            onkeydown="Mask.apply(this,'cep')"
         >
     </div>
 </div>
