add email validate

--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -16,6 +16,7 @@
             type="email"
             name="email"
             value="{{user.email}}"
+            onblur="Validate.apply(this, 'isEmail')"
         >
     </div>
 </div>
