--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -5,6 +5,7 @@
             type="text"
             name="name"
             value="{{user.name}}"
+            required
         >
     </div>
 </div>
@@ -55,6 +56,8 @@
             name="cpf_cnpj"
             value="{{user.cpf_cnpj}}"
             onkeydown="Mask.apply(this,'cpfCnpj')"
+            onblur="Validate.apply(this, 'isEmailCpfCnpj')"
+
         >
     </div>
 </div>
@@ -67,6 +70,7 @@
             name="cpf_cnpj"
             value="{{user.cep}}"
             onkeydown="Mask.apply(this,'cep')"
+            onblur="Validate.apply(this, 'isCep')"
         >
     </div>
 </div>
