feat: add include styles

--- a/src/app/views/layout.njk
+++ b/src/app/views/layout.njk
@@ -2,13 +2,11 @@
 <title>Launch Store | Compra e Venda</title>
 
 <head>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" link />
   <link rel="shortcut icon" href="./assets/favicon.ico" type="image/x-icon" />
-  <link rel="stylesheet" href="/styles.css" />
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  {% include "parts/styles.njk" %}
 </head>
-
 <body>
+  {% include "parts/messages.njk" %}
 
   {% include "parts/header.njk"%}
 
