--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -28,7 +28,11 @@
         <input 
             type="password"
             name="password"
-            value="{{user.password}}"
+            {% if not user.id %}  
+            placeholder="escolha uma senha segura"
+            {% else %}
+            placeholder="Digite sua senha para atualizar seu cadastro"
+            {% endif %}
         >
     </div>
 </div>
