fix: message error

--- a/src/app/views/parts/messages.njk
+++ b/src/app/views/parts/messages.njk
@@ -1,11 +1,11 @@
 {% if error %}
-<div class="messages erro">
+<div class="messages error">
   {{error}}
 </div>
 {% endif %}
 
 {% if success %}
-<div class="messages sucess">
+<div class="messages success">
   {{success}}
 </div>
 {% endif %}
