feat: add menu accounts

--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -21,11 +21,29 @@
 						Novo Anúncio
 					</a>
 				</li>
-				<li>
+				<li class="accounts">
 					<a href="/accounts">
 						<i class="material-icons">account_circle</i>
 						Minha conta
 					</a>
+          {% if user %}
+          <ul class="submenu">
+            <li>
+              <a href="/users">Configurações</a>
+            </li>
+             <li>
+              <a href="/buy">Meus Pedidos</a>
+            </li>
+             <li>
+              <a href="/selling">Minhas Vendas</a>
+            </li>
+             <li>
+              <form action="/users/logout" method="POST">
+                <button>Sair</button>
+              </form>
+            </li>
+          </ul>
+          {% endif %}
 				</li>
 			</ul>
 		</nav>
