--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -1,4 +1,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet" link />
 <link rel="stylesheet" href="/styles/index.css" />
 <link rel="stylesheet" href="/styles/messages.css" />
+<link rel="stylesheet" href="/styles/menu-accounts.css" />
+
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
