--- a/src/app/views/parts/header.njk
+++ b/src/app/views/parts/header.njk
@@ -26,7 +26,7 @@
 						<i class="material-icons">account_circle</i>
 						Minha conta
 					</a>
-          {% if user %}
+          {% if session.userId %}
           <ul class="submenu">
             <li>
               <a href="/users">Configurações</a>
