--- a/src/app/views/users/index.njk
+++ b/src/app/views/users/index.njk
@@ -3,7 +3,7 @@
 {% block content %}
 
 <section class="user-dashboard container form">
-	<form method="POST" action="/users?_method=PUT" 
+	<form method="POST" action="/users?_method=PUT"> 
 
 		<div class="header">
 			<h3>Detalhes</h3>
@@ -12,7 +12,6 @@
 		<div class="fields">
 			{% include 'users/fields.njk' %}
 			<input type="hidden" name="id" value={{user.id}}>
-
 		</div>	
 
 		<button class="button edit" type="submit">Atualizar</button>
