--- a/src/app/views/parts/styles.njk
+++ b/src/app/views/parts/styles.njk
@@ -2,5 +2,7 @@
 <link rel="stylesheet" href="/styles/index.css" />
 <link rel="stylesheet" href="/styles/messages.css" />
 <link rel="stylesheet" href="/styles/menu-accounts.css" />
+<link rel="stylesheet" href="/styles/session.css" />
+
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
