feat: fields login

--- a/src/app/views/users/fields.njk
+++ b/src/app/views/users/fields.njk
@@ -29,7 +29,7 @@
             type="password"
             name="password"
             {% if not user.id %}  
-            placeholder="escolha uma senha segura"
+            placeholder="Escolha uma senha segura"
             {% else %}
             placeholder="Digite sua senha para atualizar seu cadastro"
             {% endif %}
